fixing about and contact, adding preliminary content for project pages, currently having a problem with container wrapping content on index

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -9,6 +9,7 @@
  * Config saved to config.json and https://gist.github.com/bdb8d7461d7e30578b70
  */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+/*
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -63,10 +64,7 @@ strong {
 dfn {
   font-style: italic;
 }
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
+/*
 mark {
   background: #ff0;
   color: #000;
@@ -151,6 +149,8 @@ input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
+*/
+/*
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   height: auto;
@@ -188,6 +188,7 @@ td,
 th {
   padding: 0;
 }
+*/
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url('../fonts/glyphicons-halflings-regular.eot');
@@ -815,25 +816,7 @@ th {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-html {
-  font-size: 10px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333333;
-  background-color: #ffffff;
-}
-input,
-button,
-select,
-textarea {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
+
 a {
   color: #428bca;
   text-decoration: none;
